fixed namespaces, added build script

--- a/sources/MontyHallProblem/MontyHallProblem.csproj
+++ b/sources/MontyHallProblem/MontyHallProblem.csproj
@@ -1,12 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net5.0</TargetFramework>
+        <RootNamespace>DustInTheWind.MontyHallProblem</RootNamespace>
+        <AssemblyName>DustInTheWind.MontyHallProblem</AssemblyName>
 
-  <ItemGroup>
-    <PackageReference Include="ConsoleTools" Version="0.5.4" />
-  </ItemGroup>
+        <Company>Dust in the Wind</Company>
+        <Product>Monty Hall Problem</Product>
+        <Copyright>Copyright © Dust in the Wind 2021</Copyright>
+        <NeutralLanguage>en</NeutralLanguage>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="ConsoleTools" Version="0.5.4" />
+    </ItemGroup>
 
 </Project>
